# gestion_27_3_2023

./: .gitignore  CMakeLists.txt
mncqt/: CMakeLists.txt  QSqlModal.cpp  QSqlModal.h  cpp.cpp  cpp.h  cqStandardPaths.cpp  cqStandardPaths.h  cqdebug.cpp  cqdir.cpp  cqdir.h  cqheader.h  cqlabel.cpp  cqlayout.cpp  cqpushbutton.cpp  cqstring.cpp  cqvariant.cpp  cqwidget.cpp  mnsql_modal.cpp  mnsql_modal.h  qt_const.h
mndb/: CMakeLists.txt  mn_db_const.h  mndatabase.c  mndatabase.h  mndataset.c  mndataset.h  mnfilter.c  mnfilter.h  mnmeta_super.c  mnmeta_super.h  mnmetadata.c  mnmetadata.h  mnrecord.c  mnrecord.h  mnrecord_super.c  mnrecord_super.h  mnsql.c  mnsql.h  mnsqlite.c  mnsqlite.h  mntable.c  mntable.h  sqlite3.h
mndb/sqlite/: CmakeLists.txt
mnlibrary/: CMakeLists.txt  mnarray.c  mnarray.h  mnarray_char.c  mnarray_char.h  mncstring.c  mncstring.h  mncstringList.c  mncstringList.h  mndictionary.c  mndictionary.h  mnstring.c  mnstring.h  mnsystem.c  mnsystem.h  mntest.c  mntest.h  mnvariant.c  mnvariant.h  mnvariantList.c  mnvariantList.h
mnstock/: CMakeLists.txt  main.c
mnstock/modals/: tblmodal.c  tblmodal.h
mnstock/tbls/: CMakeLists.txt
mnstock/tbls/tblgroup/: tblgroup.c  tblgroup.h
mnstock/tbls/tbluser/: tbluser.c  tbluser.h  tbluser_modal.c  tbluser_modal.h  tblusers.c  tblusers.h
mnstock/tests/: CMakeLists.txt  main.c
mnstock/ui/: CMakeLists.txt
mnstock/ui/login/: frmlogin.cpp  frmlogin.h  frmlogincpp.cpp  frmlogincpp.h  ui_login.ui
python/: tblgroup.c  tblgroup.h
python/struct_header_source/: main.py
python/tbl_scripts/: const.py  fields.py  header.py  main.py  source.py  tblgroup.txt  test.py
tests/: CMakeLists.txt
tests/mncqt_t/: CMakeLists.txt  cqStandardPaths_t.c  cqStandardPaths_t.h  cqdir_t.c  cqdir_t.h  main.c  testing.c  testing.h
tests/mndb_t/: CMakeLists.txt  main.c  mndataset_t.c  mndataset_t.h  mnfilter_t.c  mnfilter_t.h  mnsql_t.c  mnsql_t.h  mnsqlite_t.h  mntable_t.c  mntable_t.h
tests/mnlibrary_t/: CMakeLists.txt  cstring_test.c  cstring_test.h  main.c  mnarray_t.c  mnarray_t.h  mncstringList_t.c  mncstringList_t.h  mndictionary_t.c  mndictionary_t.h  mnstring_t.c  mnstring_t.h  mnvariant_t.c  mnvariant_t.h
tests/tmp/: CMakeLists.txt  main.c
